# seer

./: .env.example  .gitignore  BUIDL.md  Cargo.toml  Dockerfile  PROJECT_STRUCTURE.md  PROTOCOL_INTEGRATION.md  QUICKSTART.md  README.md  SETUP.md  foundry.toml  render.yaml
.claude/: launch.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  004_user_settings.sql
backend/src/: main.rs
contract/: SeerExecutionProbe.sol  SeerIntentRegistry.sol  SeerPredictionRegistry.sol
contracts/: SeerArenaPoints.sol  SeerIdentitySBT.sol  SeerIntentRegistry.sol  SeerPredictionRegistry.sol
docs/: architecture.md  demo-runbook.md  handover.md
frontend/: .env.example  README.md  index.html  landing.jsx  package-lock.json  package.json  serve.py  vite.config.js
frontend/brand/: Directions.html  Pitch Deck-print.html  directions.jsx
frontend/public/: index.html
frontend/src/: app.jsx  main.jsx
migrations/: 002_job_runs.sql  003_lp_positions.sql
scripts/: deploy.sh  live-validation-smoke.sh
seer/: AGENT_PROMPT.md  Seer.html  agent.jsx  agentscreen.jsx  arena.jsx  cardrender.jsx  identity.jsx  landing.css  screens.css  serve.py  settings.jsx  signalfeed.jsx  styles.css
seer/brand/: Design System.html  Pitch Deck.html  seer-brand.css
src/: main.rs
src/api/: agent.rs  arena.rs  auth.rs  auth_guard.rs  contracts.rs  identity.rs  mod.rs  signals.rs
src/config/: mod.rs
src/db/: mod.rs
src/jobs/: mod.rs
src/models/: agent.rs  arena.rs  execution.rs  identity.rs  lp_position.rs  mod.rs  provider.rs  settings.rs  (+1 more)
test/: SeerArenaPoints.t.sol
(+71 files in other folders)
