[package]
name = "seer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
ethers-core = "2"
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
ethers-signers = "2"
pretty_assertions = "1"
